packages/core/src/components/tab-item/tab-item.scss
/*
 * SPDX-FileCopyrightText: 2022 Siemens AG
 *
 * SPDX-License-Identifier: MIT
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

@import 'common-variables';
@import 'mixins/text-truncation';
@import 'mixins/hover';

ix-tab-item {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 40px;
  padding: 10px $large-space;
  line-height: 20px;
  font-size: 14px;
  font-weight: bold;
  background-color: var(--theme-tab--background);
  color: var(--theme-tab--color);

  &.circle {
    height: 72px;
  }

  &.top {
    &::after {
      top: 0;
    }
  }

  &.bottom {
    &::after {
      bottom: 0;
    }
  }

  &::after {
    content: '';
    position: absolute;
    background-color: var(--theme-tab-indicator--background);
    width: 100%;
    height: var(--theme-tab-indicator--height);
    left: 0;
  }

  &.stretched {
    flex-basis: 100%;
    max-width: max-content;
    @include ellipsis;
  }

  .text {
    @include ellipsis;

    span,
    span::before {
      pointer-events: none;
    }

    vertical-align: middle;
  }

  &:hover:not(.circle) {
    background-color: var(--theme-tab--background--hover);
    color: var(--theme-tab-color-hover);
    cursor: pointer;

    &::after {
      background-color: var(--theme-tab-indicator--background--hover);
    }
  }

  &:active:not(.circle) {
    background-color: var(--theme-tab--background--active);
    color: var(--theme-tab-color--active);

    &::after {
      background-color: var(--theme-tab-indicator--background--active);
    }
  }

  &:focus-visible {
    outline: 0px solid var(--focus--border-color);

    .circle {
      outline: 1px solid var(--focus--border-color);
    }
  }

  &:focus-visible:not(.circle) {
    outline: 1px solid var(--focus--border-color);
  }

  &.disabled {
    color: var(--theme-tab--color--disabled);
    background-color: var(--theme-tab--background--disabled);

    &::after {
      background-color: var(--theme-tab-indicator--background--disabled);
    }
  }

  &.selected:not(.disabled) {
    background-color: var(--theme-tab--background--selected);
    color: var(--theme-tab--color--selected);

    &::after {
      background-color: var(--theme-tab-indicator--background--selected);
    }
  }

  &.icon {
    padding: $large-space $small-space;
  }

  &.small-tab {
    height: 32px;
    padding: $default-space;

    &.icon {
      padding: $default-space $tiny-space;
    }
  }

  .circle {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 48px;
    width: 48px;
    background-color: var(--theme-animated-tab-indicator--background);
    border-radius: 50%;
    border: 2px solid var(--theme-animated-tab-circle--border-color);
    color: var(--theme-an…icon--color);
    cursor: pointer;

    &.selected:not(.disabled) {
      background-color: var(--theme-animated-tab-circle--background--selected);
      color: var(--theme-animated-tab-icon--color--selected);
      border-color: var(--theme-animated-tab-circle--border-color--selected);

      &:hover {
        background-color: var(--theme-animated-tab-circle--background--selected);
      }
    }

    &:hover {
      background-color: var(--theme-animated-tab-circle--background--hover);
    }

    &:active {
      background-color: var(--theme-animated-tab-circle--background--active);
    }

    &:active {
      background-color: var(--theme-animated-tab-circle--background--active);
    }

    &.disabled {
      background-color: var(--theme-animated-tab-circle--background--disabled);
      border-color: var(--theme-animated-tab-circle--border-color--disabled);
    }
  }

  .counter {
    position: absolute;
    z-index: 1;
    height: 16px;
    width: auto;
    background-color: var(--theme-pill-outline--background);
    border: 1px solid var(--theme-tab-pill--border-color);
    border-radius: 100px;
    bottom: 6px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-left: $tiny-space;
    padding-right: $tiny-space;
    font-size: 12px;
    line-height: 16px;
    color: var(--theme-pill-outline--color);
    cursor: pointer;

    &.selected {
      border-color: var(--theme-tab-pill--border-color--selected);
    }

    &.disabled {
      border-color: var(--theme-tab-pill--border-color--disabled);
    }
  }

  .hidden {
    display: none;
  }
}

